<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:text="Title test text" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnShuffle"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/shuffle"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRemove"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/remove"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStateLoaded"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/loaded"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStateLoading"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStateFailed"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/failed"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStateEmpty"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/selector_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/empty"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent" />

</LinearLayout>
